--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,9 +19,12 @@
         <LinearLayout
             android:layout_width="396dp"
             android:layout_height="210dp"
+            android:gravity="center_vertical"
             android:orientation="horizontal"
-            tools:layout_editor_absoluteX="1dp"
-            tools:layout_editor_absoluteY="1dp">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <Button
                 android:id="@+id/button"
@@ -73,9 +76,15 @@
             android:id="@+id/imageView"
             android:layout_width="282dp"
             android:layout_height="259dp"
-            app:srcCompat="@drawable/idioma_de_google"
-            tools:layout_editor_absoluteX="56dp"
-            tools:layout_editor_absoluteY="60dp" />
+            android:layout_marginStart="56dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="56dp"
+            android:layout_marginBottom="60dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/idioma_de_google" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -92,25 +101,31 @@
             android:id="@+id/imageView2"
             android:layout_width="77dp"
             android:layout_height="79dp"
-            app:srcCompat="@drawable/tumblr_9f40d05a04126bb2739b9d513e811a5e_de531b46_540"
-            tools:layout_editor_absoluteX="28dp"
-            tools:layout_editor_absoluteY="16dp" />
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/tumblr_9f40d05a04126bb2739b9d513e811a5e_de531b46_540" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="33dp"
+            android:layout_marginTop="30dp"
             android:text="TextView"
-            tools:layout_editor_absoluteX="138dp"
-            tools:layout_editor_absoluteY="21dp" />
+            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="33dp"
+            android:layout_marginBottom="43dp"
             android:text="TextView"
-            tools:layout_editor_absoluteX="138dp"
-            tools:layout_editor_absoluteY="48dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView2" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
