--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -9,18 +9,29 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout6"
         android:layout_width="393dp"
-        android:layout_height="450dp"
-        tools:layout_editor_absoluteY="335dp">
+        android:layout_height="441dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8">
 
         <TableLayout
-            android:layout_width="395dp"
-            android:layout_height="449dp"
-            tools:layout_editor_absoluteX="1dp"
-            tools:layout_editor_absoluteY="3dp">
+            android:layout_width="wrap_content"
+            android:layout_height="353dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="50dp"
+            android:gravity="center_vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <TableRow
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:gravity="center">
 
                 <Button
                     android:id="@+id/button7"
@@ -43,8 +54,9 @@
             </TableRow>
 
             <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center">
 
                 <Button
                     android:id="@+id/button13"
@@ -66,8 +78,9 @@
             </TableRow>
 
             <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center">
 
                 <Button
                     android:id="@+id/button14"
@@ -95,8 +108,10 @@
         android:id="@+id/constraintLayout8"
         android:layout_width="390dp"
         android:layout_height="234dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="102dp">
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -104,24 +119,21 @@
         android:id="@+id/constraintLayout7"
         android:layout_width="393dp"
         android:layout_height="87dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="19dp">
+        android:layout_marginTop="22dp"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="34dp"
+            android:layout_marginEnd="168dp"
             android:text="TextView"
-            tools:layout_editor_absoluteX="167dp"
-            tools:layout_editor_absoluteY="34dp" />
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="50dp"
-            android:layout_height="49dp"
-            android:text="<"
-            tools:layout_editor_absoluteX="29dp"
-            tools:layout_editor_absoluteY="18dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
